--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+    .toggle-btn {
+        @apply [&>div::before]:bg-transparent [&>div::after]:bg-transparent
+    }
+}
